added recovery behaviours
Signed-off-by: Gurunatraj Parthasarathy <gurunatraj.parthasarathy@dfki.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories(
   ${behaviortree_cpp_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME} "scripts/chargepal_bt.cpp" "util/util.cpp")
+add_executable(${PROJECT_NAME} "util/util.cpp" "scripts/chargepal_bt.cpp") 
 
 add_dependencies(
   ${PROJECT_NAME}
