--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "BehaviorTree.CPP"]
 	path = BehaviorTree.CPP
 	url = https://github.com/BehaviorTree/BehaviorTree.CPP.git
+[submodule "SQLiteCpp"]
+	path = SQLiteCpp
+	url = https://github.com/SRombauts/SQLiteCpp.git
