--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,9 @@ include_directories(
   ${behaviortree_cpp_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME} "util/util.cpp" "scripts/chargepal_bt.cpp") 
+add_executable(${PROJECT_NAME} "util/util.cpp" "scripts/chargepal_bt.cpp")
+
+add_executable(${PROJECT_NAME}_test "util/util.cpp" "scripts/test_functions.cpp" ) 
 
 add_dependencies(
   ${PROJECT_NAME}
@@ -47,22 +49,28 @@ target_link_libraries(
   SQLiteCpp
   )
 
+target_link_libraries(
+  ${PROJECT_NAME}_test
+  ${catkin_LIBRARIES}
+  SQLiteCpp
+  )
+
 find_package(ament_cmake QUIET)
 
 if(ament_cmake_FOUND)
-
     find_package(behaviortree_cpp REQUIRED)
     ament_target_dependencies(${PROJECT_NAME} behaviortree_cpp)
 
 elseif( CATKIN_DEVEL_PREFIX OR CATKIN_BUILD_BINARY_PACKAGE)
-
     find_package(catkin REQUIRED COMPONENTS behaviortree_cpp)
     catkin_package(CATKIN_DEPENDS behaviortree_cpp)
     target_include_directories(${PROJECT_NAME} PRIVATE ${catkin_INCLUDE_DIRS})
+    target_include_directories(${PROJECT_NAME}_test PRIVATE ${catkin_INCLUDE_DIRS})
+
     target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME}_test ${catkin_LIBRARIES})
 
 else()
-
     find_package(behaviortree_cpp REQUIRED)
     target_link_libraries(${PROJECT_NAME} BT::behaviortree_cpp)
 
