--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,8 @@
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>roslib</build_depend>
+  <build_depend>yaml-cpp</build_depend>
+
 
   <depend>rclcpp</depend>
   <depend>behaviortree_cpp</depend>
@@ -66,6 +68,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
+  <build_export_depend>yaml-cpp</build_export_depend>
 
   
   <exec_depend>roscpp</exec_depend>
@@ -76,6 +79,7 @@
   <exec_depend>message_generation</exec_depend>
   <exec_depend>chargepal_actions</exec_depend>
   <exec_depend>roslib</exec_depend>
+  <exec_depend>yaml-cpp</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
